--- a/frontend/src/styles/components/_recipeBookTile.scss
+++ b/frontend/src/styles/components/_recipeBookTile.scss
@@ -1,27 +1,75 @@
 .recipe-book-tile-container {
   position: relative;
-  height: auto;
+
+  height: 450px;
+  min-height: 450px;
+  max-height: 450px;
   width: 100%;
+  min-width: 100%;
+  max-width: 100%;
+
+  & img {
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    height: calc(70%);
+    max-height: calc(70%);
+    min-height: calc(70%);
+  }
+
+  @media screen and (max-width: 620px) {    
+    height: 800px;
+    min-height: 800px;
+    max-height: 800px;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;    
+  }
+
+  @media screen and (max-width: 820px) {    
+    height: 300px;
+    min-height: 300px;
+    max-height: 300px;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;    
+  }
+  
+  @media screen and (max-width: 1300px) {    
+    height: 300px;
+    min-height: 300px;
+    max-height: 300px;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;    
+  }
+
+  @media screen and (max-width: 1300px) {    
+    height: 400px;
+    min-height: 400px;
+    max-height: 400px;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;    
+  }
+
   position: relative;
   display: flex;
   flex-direction: column;
   color: black;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 
   & .edit-icons {
     position: absolute;
     top: 0;
-    right: 0;    
+    right: 0;
     border: solid 1px $borderColor;
     border-right: none;
     width: max-content;
     background-color: white;
     z-index: 4;
-    
-    
+
     & .edit-icon-container {
-      cursor: pointer; 
+      cursor: pointer;
       padding: 10px;
       border: solid 1px $borderColor;
       display: flex;
@@ -34,11 +82,6 @@
     }
   }
 }
-.recipe-book-tile-container img {
-  display: block;
-  height: auto;
-  max-width: 100%;
-}
 
 .recipe-book-tile-container .title {
   width: 90%;
@@ -50,6 +93,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
   h6 {
     text-transform: uppercase;
     color: black;
@@ -94,7 +138,7 @@
   padding: 10px;
   background-color: black;
   width: max-content;
-  
+
   small {
     color: white;
     text-transform: uppercase;
