--- a/frontend/src/styles/components/_recipeTile.scss
+++ b/frontend/src/styles/components/_recipeTile.scss
@@ -1,10 +1,49 @@
 .recipe-tile-container {
-  min-width: 100%;
-  width: 100%;
   position: relative;
   margin: 0 auto;
-  height: 100%;
-  min-height: 100%;
+
+  height: 450px;
+  min-height: 450px;
+  max-height: 450px;
+  width: 100%;
+  min-width: 100%;
+  max-width: 100%;
+
+  & img {
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    height: calc(55%);
+    max-height: calc(55%);
+    min-height: calc(55%);
+  }
+
+  @media screen and (max-width: 620px) {    
+    height: 500px;
+    min-height: 500px;
+    max-height: 500px;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%; 
+  }
+
+  @media screen and (min-width: 900px) {    
+    height: 400px;
+    min-height: 400px;
+    max-height: 400px;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%; 
+  }
+
+  @media screen and (min-width: 1240px) {    
+    height: 450px;
+    min-height: 450px;
+    max-height: 450px;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%; 
+  }
 }
 
 .recipe-slide-information-wrapper {
@@ -54,6 +93,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   overflow: hidden;
 
   h6 {
@@ -102,15 +142,45 @@
 }
 
 .create-recipe-tile {
-  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
   box-shadow: none;
   border: dotted 2px $borderColor;
-  padding: 40px;
   cursor: pointer;
-  min-height: 300px;
-  height: 100%;
-  align-self: flex-start;
+
+  height: 450px;
+  min-height: 450px;
+  max-height: 450px;
+  width: 100%;
+  min-width: 100%;
+  max-width: 100%;
+  padding: 30px;
+
+  @media screen and (max-width: 620px) {
+    height: 500px;
+    min-height: 500px;
+    max-height: 500px;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%; 
+  }
+
+  @media screen and (min-width: 900px) {    
+    height: 400px;
+    min-height: 400px;
+    max-height: 400px;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%; 
+  }
+
+  @media screen and (min-width: 1240px) {    
+    height: 450px;
+    min-height: 450px;
+    max-height: 450px;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%; 
+  }
 }
