--- a/frontend/src/styles/components/_recipesGallery.scss
+++ b/frontend/src/styles/components/_recipesGallery.scss
@@ -9,12 +9,7 @@
 
 .recipes-gallery .recipe-tile-container {
   position: relative;   
-}
-
-.recipe-tile-container img {  
-  max-width: 100%;
-  min-width: 100%;  
-  width: 100%;  
+  margin-bottom: 20px;
 }
 
 .recipe-slide-information-wrapper {
