--- a/frontend/src/styles/screens/_createRecipeScreen.scss
+++ b/frontend/src/styles/screens/_createRecipeScreen.scss
@@ -73,6 +73,7 @@
       font-weight: bold;
       text-transform: uppercase;
       letter-spacing: 3px;      
+      text-align: center;
     }
 
     & .summary-info {
